--- a/css/index.css
+++ b/css/index.css
@@ -97,7 +97,6 @@
     font-size: 5.5vw;
     color: var(--hero-text-color);
     font-weight: 700;
-    
 }
 
 
@@ -106,27 +105,44 @@
 
 
 /*Utilidades*/
+
+img {
+    /*Este reseteo de las imagenes es para que se adapte el tamaño a la pantalla(ya sea Desktop o Responsive)*/
+    max-width: 100%;
+    height: auto;
+}
+
+p {
+    line-height: 1.6;
+}
+
 .container {
     margin-left: auto;
     margin-right: auto;
-    max-width: var(--max-width);
+    max-width: 1200px;
 }
+
+.container h2{
+    font-size: 1.5rem;
+    padding: 1rem;
+    width: 25rem;
+}
+    
 
 .section-title{
     border-top: thin solid #343a40;
     border-bottom: thin solid #343a40;
     margin: 2rem auto;
     padding: .5rem;
-    width: 250px;
+    width: 500px;
     text-align: center;
     color: #333333;
+    order: -2;
 }
 
 
 
 /*Slider*/
-
-
 
 @keyframes carousel-slide{
     0%{
@@ -208,4 +224,66 @@ siguiente(que sean la misma etiqueta)*/
 #slide-3:checked ~ .slides-nav label#dot-3,
 #slide-4:checked ~ .slides-nav label#dot-4{
     background-color: #666666;
+}
+
+/*imagenes con info que acompañan al slider*/
+
+.info{
+    margin: 1.3rem auto;
+    padding: .8rem;
+    height: 100%;
+    
+}
+
+.info p{
+    margin: 1rem 0;
+}
+
+
+.info img{
+    width: 100%;
+    height: 100%;
+    /*Esto hace que las imágenes no se deformen*/
+    object-fit: cover;
+}
+
+
+.info, .container{
+    height: 75%;
+}
+
+/*Responsive Design de contenido slider*/
+
+.contenido .hero-image-content{
+    display: grid;
+}
+
+.hero-image-content .container{
+    order: -1;
+}
+
+
+@media screen and (min-width: 768px){
+    .contenido .hero-image-content{
+        grid-template-columns: repeat(3,1fr);
+    }
+
+    .hero-image-content .container{
+        order: 0;
+    }
+
+    .section-title{
+        grid-column: span 3;
+    }
+
+    .info{
+        max-width: 500px;
+        max-height: 300px;
+       
+    }
+
+
+    
+    
+
 }
