--- a/css/vendeauto.css
+++ b/css/vendeauto.css
@@ -98,3 +98,36 @@
         justify-content: center;
         justify-items: center;
     }
+    /* FOOTER */
+    
+    .footer {
+        padding: 20px;
+        color: white;
+        display: flex;
+        text-align: center;
+    }
+    
+    .logo-footer {
+        float: left;
+        padding-top: 30px;
+    }
+    
+    .social {
+        text-align: right;
+        padding-top: 50px;
+    }
+    
+    .social li {
+        display: inline-block;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    
+    .social a {
+        text-decoration: none;
+        color: #ffffff;
+    }
+    
+    .derechos {
+        text-align: center;
+    }
