--- a/css/index.css
+++ b/css/index.css
@@ -69,11 +69,11 @@
         position: sticky;
         top: 0;
     }
-    /* *** HeroImage *** */
+    /* *** HeroImage principal y secundario*** */
     
     .hero-image {
         /*Usando variable CSS del estilo en línea de .hero-image para poner la URL de la imagen*/
-        background-image: var(--hero-image);
+        background-image: url('/img/heroImage.jpg');
         /*Quitando el efecto de repitición de la imagen*/
         background-repeat: no-repeat;
         /*Haciendo que la imagen ocupe todo el ancho*/
@@ -82,7 +82,7 @@
         background-position: center;
         /*Dejando fijada la imagen para que el contenido del sitio pase sobre ella
         (usando fixed en background-attachment)*/
-        background-attachment: var(--hero-attachment);
+        background-attachment: fixed;
     }
     
     .hero-image-opacity {
@@ -92,14 +92,26 @@
         justify-content: center;
         align-items: center;
         text-align: center;
-        background-color: var(--hero-opacity-color);
+        background-color: rgba(0, 0, 0, 0.5);
     }
     
     .hero-image-title {
         font-size: 5.5vw;
-        color: var(--hero-text-color);
+        color: #FFFFFF;
         font-weight: 700;
     }
+
+    .contenido .hero-image{
+        background-image: url( '/img/heroImage-services.jpg');
+        background-attachment: scroll;
+    }
+
+    .contenido .hero-image-opacity{
+        background-color: rgba(255, 255, 255, 0.5);
+    }
+
+
+
     /* *** Carousel slider *** */
     /*Utilidades*/
     
