--- a/css/index.css
+++ b/css/index.css
@@ -197,6 +197,10 @@ p {
     animation: carousel-slide 12s ease-in-out 3s;
 }
 
+.slide blockquote{
+    padding: 0 10rem;
+}
+
 .carousel input {
     display: none;
 }
