--- a/css/albumAutos.css
+++ b/css/albumAutos.css
@@ -5,113 +5,13 @@
   padding: 0;
 }
 
-.logo-empresa {
-  font-size: 1rem;
-}
-
-.btn-outline-success {
-  color: #f9fafb;
-  border-color: #f9fafb;
-}
-
-.btn-outline-success:hover {
-  color: black;
-  background-color: white;
-  border-color: black;
-}
-
-.btn {
-  height: 38px;
-}
-
-.buscar {
-  margin-right: 10px;
-}
-
-.btn-vende:hover {
-  color: #ffffff;
-  background-color: #000000;
-}
-
-.nav-item {
-  margin-left: 30px;
-  margin-right: 30px;
-}
-
-.navbar-nav li:hover>ul.dropdown-menu {
-  display: block;
-}
-
-.dropdown-submenu {
-  position: relative;
-}
-
-.dropdown-submenu>.dropdown-menu {
-  top: 0;
-  left: 100%;
-  margin-top: -6px;
-}
-
-.dropdown-menu>li>a:hover:after {
-  text-decoration: underline;
-  transform: rotate(-90deg);
-}
-
-.btn-group-lg>.btn,
-.btn-lg {
-  font-size: 1rem;
-}
-
-.form-control {
-  height: 35px;
-}
-
-.icono {
-  height: 35px;
-}
-
-.navbar {
-  position: sticky;
-  top: 0;
-}
-/* *** HeroImage *** */
-
-.hero-image {
-  /*Usando variable CSS del estilo en línea de .hero-image para poner la URL de la imagen*/
-  background-image: var(--hero-image);
-  /*Quitando el efecto de repitición de la imagen*/
-  background-repeat: no-repeat;
-  /*Haciendo que la imagen ocupe todo el ancho*/
-  background-size: cover;
-  /*Centrando imagen en su contenedor*/
-  background-position: center;
-  /*Dejando fijada la imagen para que el contenido del sitio pase sobre ella
-(usando fixed en background-attachment)*/
-  background-attachment: var(--hero-attachment);
-}
-
-.hero-image-opacity {
-  width: 100%;
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  background-color: var(--hero-opacity-color);
-}
-
-.hero-image-title {
-  font-size: 5.5vw;
-  color: var(--hero-text-color);
-  font-weight: 700;
-}
-
 body{
   font-family: 'Raleway', sans-serif;
-  background-color: #000000;
+ 
 }
 
 h1{
+  /* background-image: url( 'https://www.coches.com/fotos_historicas/astonmartin/DBS-Superleggera-2018/astonmartin_dbs-superleggera-2018_r30.jpg'); */
   font-weight: 400;
   text-align: center;
   padding: 20px 0;
@@ -126,7 +26,7 @@ h1{
 }
 
 .galeria{
-  
+  /* background-image: url( 'https://www.coches.com/fotos_historicas/astonmartin/DBS-Superleggera-2018/astonmartin_dbs-superleggera-2018_r30.jpg') ; */
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   width: 95%;
@@ -205,56 +105,6 @@ h1{
   line-height: 30px;
   text-decoration: none;
   text-align: center;
-}
-
-/* FOOTER */
-    
-.footer {
-  padding: 20px;
-  color: white;
-  display: flex;
-  text-align: center;
-}
-
-.logo-footer {
-  float: left;
-  padding-top: 30px;
-}
-
-.social {
-  text-align: right;
-  padding-top: 50px;
-}
-
-.social li {
-  display: inline-block;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
-.social a {
-  text-decoration: none;
-  color: #ffffff;
-}
-
-.derechos {
-  text-align: center;
-}
-
-@media screen and (min-width: 768px) {
-  .contenido .hero-image-content {
-      grid-template-columns: repeat(3, 1fr);
-  }
-  .hero-image-content .container {
-      order: 0;
-  }
-  .section-title {
-      grid-column: span 3;
-  }
-  .info {
-      max-width: 500px;
-      max-height: 300px;
-  }
 }
 
 
