Enlazando galería con la sección de vende tu auto

--- a/css/index.css
+++ b/css/index.css
@@ -121,7 +121,7 @@ html{
 
 
 .hero-image.hero-image-contacto{
-    background-image: none;
+    background-image: url('../img/heroImage-contacto.jpg');
 }
 
 
