--- a/css/index.css
+++ b/css/index.css
@@ -124,6 +124,10 @@ html{
     background-image: url('../img/heroImage-contacto.jpg');
 }
 
+.hero-image.hero-image-galeria{
+    background-image: url('../img/heroImage-galeria.jpg');
+}
+
 
 
 /* *** Carousel slider *** */
@@ -194,7 +198,7 @@ p {
     display: flex;
     list-style: none;
     transition: transform 3s ease-in-out;
-    animation: carousel-slide 12s ease-in-out 3s;
+    animation: carousel-slide 12s ease-in-out 3s infinite;
 }
 
 .carousel input {
