--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,10 @@ html{
     box-sizing: border-box;
 }
 
+body{
+    background-color: #bdbaba;
+}
+
 
 
 /* NavBar */
@@ -319,6 +323,8 @@ siguiente(que sean la misma etiqueta)*/
     text-align: center;
 }
 
+
+
 @media screen and (min-width: 768px) {
     .contenido .hero-image-content {
         grid-template-columns: repeat(3, 1fr);
@@ -355,87 +361,4 @@ siguiente(que sean la misma etiqueta)*/
     }
 }
 
-/* *** Contact Form *** */
 
-.btn-contact {
-    border-radius: .5rem;
-    padding: 1rem;
-    display: inline-block;
-    width: 200px;
-    font-weight: bold;
-    text-align: center;
-    text-decoration: none;
-    color: #ffffff;
-    background-color: #343a40;
-    text-transform: uppercase;
-}
-
-.box-shadow-1 {
-    box-shadow: .25rem .25rem 1rem rgba(0, 0, 0, 0.25);
-}
-
-.contact-form{
-    margin: 2rem auto;
-    padding: 1rem;
-    max-width: 800px;
-}
-
-.contact-form > *{
-    padding: .5rem;
-    margin: 1rem auto;
-    display: block;
-    width: 100%;
-}
-
-.contact-form input,
-.contact-form textarea{
-    font-size: .85rem;
-    font-family: var(--font);
-}
-
-.contact-form input{
-    border: 0;
-    padding-left: 0;
-    border-bottom: thin solid #666666;
-}
-
-.contact-form textarea{
-    border: thin solid #666666;
-    /* Esta propiedad permite que el area de texto no se redimensione */
-    resize: none;
-}
-
-.contact-form input[type="submit"]{
-    margin-top: 0;
-    cursor: pointer;
-    transition: all .5s ease-out;
-}
-
-.contact-form input[type="submit"]:hover{
-    opacity: .75;
-}
-
-.contact-form *::placeholder{
-    color: #666666;
-}
-
-@media screen and (min-width: 1024px){
-    .contact-form{
-        display: grid;
-        grid-template-columns: repeat(2,1fr);
-        column-gap: 1rem;
-    }
-
-    .contact-form input,
-    .contact-form textarea{
-        font-size: 1rem;
-    }
-
-    .contact-form textarea{
-        grid-column: span 2;
-    }
-
-    .contact-form input[type="submit"]{
-        margin-left: 0;
-    }
-}
