--- a/css/contacto.css
+++ b/css/contacto.css
@@ -3,6 +3,12 @@ body{
     background-color: #ffffff;
 }
 
+.none{
+    display: none;
+}
+
+
+
 
 .btn-contact {
     border-radius: .5rem;
@@ -32,12 +38,12 @@ body{
     margin: 1rem auto;
     display: block;
     width: 100%;
+    outline: none;
 }
 
 .contact-form input,
 .contact-form textarea{
     font-size: .85rem;
-    font-family: var(--font);
 }
 
 .contact-form input{
@@ -66,6 +72,32 @@ body{
     color: #666666;
 }
 
+.contact-form-response{
+    padding: 1rem;
+    width: 400px;
+    text-align: center;
+    background-color: #FFFFFF;
+    margin: 0 auto;
+}
+
+.contact-form-response svg{
+    margin-top: 2rem;
+    width: 4rem;
+    height: 4rem;
+    fill: #343a40;
+}
+
+
+
+
+
+
+.modal#gracias:target{
+    opacity: 1;
+    pointer-events: auto;
+
+}
+
 @media screen and (min-width: 1024px){
     .contact-form{
         display: grid;
@@ -78,7 +110,8 @@ body{
         font-size: 1rem;
     }
 
-    .contact-form textarea{
+    .contact-form textarea,
+    .contact-form-loader{
         grid-column: span 2;
     }
 
@@ -86,3 +119,28 @@ body{
         margin-left: 0;
     }
 }
+
+/* *** Ventana Modal *** */
+.modal{
+    position: fixed;
+    z-index: 999;
+    /* Se usa top,right,bottom y left en 0 para que la caja se estire en toda la pantalla */
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    pointer-events: none;
+    transition: all 1s;
+}
+
+.modal-content{
+    position: relative;
+    width: 40%;
+}
+
+
