--- a/css/contacto.css
+++ b/css/contacto.css
@@ -3,10 +3,6 @@ body{
     background-color: #ffffff;
 }
 
-.none{
-    display: none;
-}
-
 
 
 
@@ -28,6 +24,9 @@ body{
 }
 
 .contact-form{
+    --form-ok-color: #4caf50;
+    --form-error-color: #f44336;
+
     margin: 2rem auto;
     padding: 1rem;
     max-width: 800px;
@@ -48,7 +47,7 @@ body{
 
 .contact-form input{
     border: 0;
-    padding-left: 0;
+    padding-left: 0.5rem;
     border-bottom: thin solid #666666;
 }
 
@@ -88,15 +87,68 @@ body{
 }
 
 
-
-
-
-
 .modal#gracias:target{
+    visibility: visible;
     opacity: 1;
     pointer-events: auto;
 
 }
+
+
+/* Seleccionando todos los elementos del formulario que tengan el atributo 'required' y que hayan sido validados
+correctamente. La pseudo-clase :valid da estilos al contenido texto que haya sido validado en un formulario*/
+.contact-form [required]:valid{
+    border: thin solid var(--form-ok-color);/*agrega borde verde al <input> o <textarea>*/
+}
+  
+/* Seleccionando todos los elementos del formulario que tengan el atributo 'required' y que hayan sido incorrectos
+el ingreso. La pseudo-clase :invalid da estilos al contenido texto que haya sido incorrecto con la validación de un
+formulario*/
+.contact-form [required]:invalid{
+  border: thin solid var(--form-error-color);/*agrega borde rojo al <input> o <textarea>*/
+}
+  
+  
+.contact-form-error{
+  margin-top: -1rem;
+  font-size: 90%;
+  background-color: var(--form-error-color);
+  color: #fff;
+  transition: all 800ms ease;
+}
+  
+.contact-form-error.is-active{
+  display: block;
+  /*Creando animación que se llama 'show-message', dura 1s, se ejecuta solo 1 vez de forma normal, tiene 0s de
+  retardo, tiene el efecto de animación ease-out y el 'both' significa que va a conservar los estilos con la que
+  la animación termine*/
+  animation: show-message 1s 1 normal 0s ease-out both;
+}
+
+.none{
+    display: none;
+}
+
+
+/* @keyframes permite a los autores controlar los pasos intermedios en una secuencia de animación CSS mediante 
+el establecimiento de keyframes (o puntos de trayectoria) a lo largo de la secuencia de animación que debe 
+ser alcanzado por determinados puntos durante la animación. */
+@keyframes show-message{ /*Controlando animación*/
+    /* La animacion empezará siendo no visible */
+    0%{
+      visibility: hidden;
+      opacity: 0;
+    }
+    /* La animacion terminará siendo visible */
+    100%{
+      visibility: visible;
+      opacity: 1;
+    }
+  }
+  
+
+
+
 
 @media screen and (min-width: 1024px){
     .contact-form{
@@ -118,6 +170,20 @@ body{
     .contact-form input[type="submit"]{
         margin-left: 0;
     }
+
+    #nombre{
+        grid-row: 2 / 3;
+    }
+
+    #correo{
+        grid-column: 2 / 3;
+    }
+
+    #comentarios{
+        grid-column: span 2;
+    }
+
+
 }
 
 /* *** Ventana Modal *** */
@@ -133,6 +199,7 @@ body{
     justify-content: center;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.5);
+    visibility: hidden;
     opacity: 0;
     pointer-events: none;
     transition: all 1s;
@@ -142,5 +209,7 @@ body{
     position: relative;
     width: 40%;
 }
+
+
 
 
