--- a/assets/components/form-contacto.html
+++ b/assets/components/form-contacto.html
@@ -7,7 +7,7 @@
     <textarea name="comentarios" cols="50" rows="10" placeholder="Déjame tus comentarios *" title="Tu comentario no debe exceder los 255 carácteres" data-pattern="^.{1,255}$" required></textarea>
 
     <div class="contact-form-loader text-center none">
-        <img  src="img/loader.svg" alt="Enviando...">
+        <img  src="../../img/loader.svg" alt="Enviando...">
     </div>
 
     <input class="btn-contact" type="submit" value="ENVIAR MENSAJE">
