--- a/css/autosUsados.css
+++ b/css/autosUsados.css
@@ -1,6 +1,6 @@
 html{
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-size: 16px;
 }
 
@@ -56,4 +56,24 @@ html{
 .footer{
     margin: 0;
 }
+
+.succes{
+    box-shadow: .25rem .25rem 1rem rgba(0, 0, 0, 0.25);
+    width: 50%;
+    margin: 5rem auto;
+    padding: 1rem;
+    text-align: center;
+}
+
+.succes h2{
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 2rem;
+}
+
+.succes p{
+    font-size: 1.3rem;
+}
+
+
 
