--- a/css/index.css
+++ b/css/index.css
@@ -130,34 +130,51 @@ body {
 }
 
 
-/*imagenes con info que acompañan al slider*/
+/*Configuracion texto dentro de carrusel*/
 
-.info {
-    margin: 1.3rem auto;
-    padding: .8rem;
+.texto-carrusel {
+    background-color: rgba(41, 23, 1, 0.75);
     height: 100%;
+    left: 0;
+    top: 0;
+    padding-left: 10px;
+    width: 450px;
+    margin: 0;
+    opacity: 0.9;
+    text-align: justify;
 }
 
-.info p {
-    margin-bottom: 7rem;
-    font-size: .85rem;
-    width: 100%;
-    margin: 0 auto;
-    padding: 1rem 6rem;
-    padding-bottom: 8rem;
+
+/*Tamaño del texto del carrusel segun tamaño de pantalla*/
+
+@media (max-width: 777px) {
+    .texto-carrusel h3 {
+        font-size: 100%;
+    }
+    .texto-carrusel p {
+        font-size: 70%;
+    }
 }
 
-.info img {
-    width: 100%;
-    height: 100%;
-    /*Esto hace que las imágenes no se deformen*/
-    object-fit: cover;
-    margin-top: 6rem;
+@media (max-width: 560px) {
+    .texto-carrusel h3 {
+        font-size: 100%;
+    }
+    .texto-carrusel p {
+        font-size: 70%;
+    }
 }
 
-.info,
-.container {
-    height: 75%;
+@media (max-width: 400px) {
+    .texto-carrusel h3 {
+        font-size: 50%;
+    }
+    .texto-carrusel p {
+        font-size: 30%;
+    }
+    .texto-carrusel {
+        width: 100%;
+    }
 }
 
 
