fix carousel autosNuevos

--- a/css/productos.css
+++ b/css/productos.css
@@ -1,3 +1,34 @@
+@media (max-width: 777px) {
+    .texto-carrusel h3 {
+        font-size: 100%;
+    }
+    .texto-carrusel p {
+        font-size: 70%;
+    }
+}
+
+@media (max-width: 560px) {
+    .texto-carrusel h3 {
+        font-size: 100%;
+    }
+
+    .texto-carrusel p {
+        font-size: 70%;
+    }
+}
+
+@media (max-width: 400px) {
+    .texto-carrusel h3 {
+        font-size: 50%;
+    }
+    .texto-carrusel p {
+        font-size: 30%;
+    }
+    .texto-carrusel {
+        width: 100%;
+    }
+}
+
 .tarjetas {
     margin: 0;
     text-align: center;
