--- a/css/index.css
+++ b/css/index.css
@@ -79,18 +79,52 @@ html {
 
 
 /* *** HeroImage principal y secundario*** */
+.video{
+    position: relative;
+    max-height: 70rem;
+    overflow: hidden;
+}
+
+.overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+video{
+    display: block;
+    width: 100%;
+}
+
+.contenido-video{
+    display: flex;
+    align-items: center;
+    height: 100%;
+    position: relative;
+    z-index: 1;
+}
+
+.contenido-video h2{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    color: #fff;
+    font-size: 7rem;
+}
+
+.contenido-video h2 span{
+    background-color: rgba(0,0,0,.5);
+    font-size: 2rem;
+    padding: 1rem 2rem;
+}
+
 
 .hero-image {
-    /*Usando variable CSS del estilo en línea de .hero-image para poner la URL de la imagen*/
+    
     background-image: url('../img/heroImage.jpg');
-    /*Quitando el efecto de repitición de la imagen*/
     background-repeat: no-repeat;
-    /*Haciendo que la imagen ocupe todo el ancho*/
     background-size: cover;
-    /*Centrando imagen en su contenedor*/
     background-position: center;
-    /*Dejando fijada la imagen para que el contenido del sitio pase sobre ella
-    (usando fixed en background-attachment)*/
     background-attachment: fixed;
 }
 
@@ -118,6 +152,7 @@ html {
 .contenido .hero-image-opacity {
     background-color: rgba(255, 255, 255, 0.5);
 }
+
 
 .hero-image.hero-image-contacto {
     background-image: url('../img/heroImage-contacto.jpg');
